<resources>
    <string name="app_name">Sistema de ventas de productos</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="categoria">Categoria</string>
    <string name="producto">Producto</string>
    <string name="cliente">Cliente</string>
    <string name="venta">Venta</string>
    <string name="credencialNoValida">Credenciales no validas</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombreCategoria">Categoria</string>
    <string name="filtrar">Filtrar</string>
    <string name="agregar">Agregar</string>
    <string name="categoriaAgregadaCorrectamente">Categoria agregada correctamente</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ruc">Ruc</string>
    <string name="email">Email</string>
    <string name="clienteAgregadoCorrectamente">Cliente registrado correctamente</string>
    <string name="nroFactura">Numero de factura</string>
    <string name="fecha">Fecha</string>
    <string name="total">Total</string>
    <string name="ventaAgregadoCorrectamente">Venta registrada correctamente</string>
    <string name="compraAgregadoCorrectamente">Compra registrada correctamente</string>
    <string name="codigo">Codigo</string>
    <string name="precio_unitario">Precio unitario</string>
    <string name="productoRegistradoCorrectamente">Producto registrado correctamente</string>
    <string name="codigo_producto">Codigo del producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="proveedor" />
    <string name="compra">Compra</string>
    <string name="noHaySuficienteStock">No hay suficiente stock</string>
    <string name="seleccioneProducto">Seleccione un producto</string>
    <string name="seleccionar_cliente">Seleccione un cliente</string>
    <string name="seleccionar_producto">Seleccione el producto</string>
</resources>