<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SelectActivity">

    <Button
        android:layout_width="200dp"
        android:onClick="btnEventoCategoria"
        android:layout_height="wrap_content"
        android:text="@string/categoria"/>
    <Button
        android:layout_width="200dp"
        android:onClick="btnEventoProducto"
        android:layout_height="wrap_content"
        android:text="@string/producto"/>
    <Button
        android:layout_width="200dp"
        android:onClick="btnEventoCliente"
        android:layout_height="wrap_content"
        android:text="@string/cliente"/>
    <Button
        android:layout_width="200dp"
        android:onClick="btnEventoVenta"
        android:layout_height="wrap_content"
        android:text="@string/venta"/>

    <Button
        android:layout_width="200dp"
        android:onClick="btnEventoCompra"
        android:layout_height="wrap_content"
        android:text="@string/compra"/>


</LinearLayout>
