<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".cliente.NewClienteActivity">

    <EditText
        android:id="@+id/txtNombreNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nombre"/>

    <EditText
        android:id="@+id/txtApellidoNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/apellido"/>

    <EditText
        android:id="@+id/txtRucNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ruc"/>

    <EditText
        android:id="@+id/txtEmailNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/email"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="agregarNuevoCliente"
        android:text="@string/agregar"/>

</LinearLayout>