<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".producto.NewProductoActivity">

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/codigo"/>

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/producto"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:prompt="@string/categoria"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/precio_unitario"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="agregarNuevoProducto"
        android:text="@string/agregar"/>

</LinearLayout>