<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".venta.NewVentaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/spinnerCliente"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:prompt="@string/cliente"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/txtNroFactura"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nroFactura"/>

    <!--<EditText
        android:id="@+id/txtFecha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/fecha"/>-->

    <EditText
        android:id="@+id/txtTotal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:editable="false"
        android:hint="@string/total"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="agregarNuevaVenta"
        android:text="@string/agregar"/>

</LinearLayout>