<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".compra.NewCompraActivity">


    <EditText
        android:id="@+id/txtNroFactura"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/nroFactura"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Proveedor"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/spinnerProveedor"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:prompt="Proveedor"
        android:layout_marginBottom="16dp"/>


    <!--<EditText
        android:id="@+id/txtFecha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/fecha"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        android:layout_marginBottom="16dp"/>
    <Spinner
        android:id="@+id/spinnerProducto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:prompt="@string/producto"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/txtCantidadProducto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/cantidad"
        android:layout_marginBottom="16dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/total"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="agregarNuevaCompra"
        android:text="@string/agregar"/>
</LinearLayout>