<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".producto.FiltroProductoActivity">

  <EditText
      android:id="@+id/txtCodigo"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:hint="@string/codigo"
      android:layout_marginBottom="16dp"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/categoria"
      android:layout_marginBottom="16dp"/>

  <Spinner
      android:id="@+id/spinnerCategoria"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:prompt="@string/categoria"
      android:layout_marginBottom="16dp"/>

  <Button
      android:layout_width="200dp"
      android:onClick="btnEventoFiltrarProducto"
      android:layout_height="wrap_content"
      android:text="@string/filtrar"/>

</LinearLayout>
